# fifo_map

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.MIT  Makefile  README.md  appveyor.yml
cmake/: config.cmake.in  uninstall.cmake.in
include/nlohmann/: fifo_map.hpp
src/: fifo_compare.hpp  fifo_map.hpp
test/: unit.cpp
